<resources>
    <string name="app_name">Submission Aplikasi Story App</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="message_welcome_page">If you want post to story app. Just capture it or choose your photo then boom! check it out your post stories 😁</string>
    <string name="title_welcome_page">Welcome the story app!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready for post a story?</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="copyright">© 2022 Auric</string>
    <string name="greeting">Welcome, %1$s</string>
    <string name="logout">Sign Out</string>
    <string name="success">Horray!</string>
    <string name="message_success_signup">Thank you for signing up for story app. Next to Sign In 😁</string>
    <string name="fill_email">Enter an email</string>
    <string name="invalid_email">The email is invalid</string>
    <string name="fill_name">Enter a name</string>
    <string name="fill_password">Please insert a password</string>
    <string name="wrong">Password does not match</string>
    <string name="min_password">"Use a minimum of 6 characters"</string>
    <string name="remember">Remember me</string>
    <string name="add">add</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="language">Change language</string>
    <string name="denyper">You do not have permission</string>
    <string name="choose">Choose a Picture</string>
    <string name="failedfoto">Failed instance Retrofit</string>
    <string name="insertfoto">Please enter a picture first</string>
    <string name="complete">must complete</string>
    <string name="invalid">Invalid data entered</string>
    <string name="accountok">Account has been created successfully, please go to the login page</string>
    <string name="accountfail">Account failed to create</string>
    <string name="serverfail">it could be because the email has been used, connection problems, or server problems</string>
    <string name="datamust">Data must be filled correctly</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="parsing">Style Parsing Failed</string>
    <string name="failedstyle">Can\'t Find The Style</string>
    <string name="errorparsing">Error Parsing</string>
    <string name="cantfind">Can\'t find style. Error: </string>
    <string name="poststory"> Story from: </string>
    <string name="location">Location</string>
    <string name="empty_location">Location is not found. Try again!</string>
    <string name="empty_address">Unknown address</string>
</resources>